# project_template

./: .gitignore  .pre-commit-config.yaml  cookiecutter.json  dev-requirements.in  justfile  pyproject.toml  ruff.toml
tests/: .coveragerc
{{ cookiecutter.project_name }}/: .envrc  .pre-commit-config.yaml  justfile  pyproject.toml
