[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = '{{ cookiecutter.package_name }}'
version = '0.0.1'
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["dev-requirements.txt"] }

#[project.scripts]
#hello = "example:thinger"
